# docs/swagger.yaml
@@ -516,6 +516,28 @@ paths:
       summary: Update a product
       tags:
       - Products
+  /products/search:
+    get:
+      description: Search products by name or category name
+      parameters:
+      - description: Search query for product name or category name
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dtos.GetProductsSuccessResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/kasir-api_dtos.ErrorResponse'
+      summary: Search products
+      tags:
+      - Products
 schemes:
 - http
 swagger: "2.0"
